<resources>
    <string name="app_name">Love Chat</string>
    <string name="userName">User name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="settings">Account Settings</string>
    <string name="userPassword">Password</string>
    <string name="emailRegister">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="forgetPassword">Forget password</string>
    <string name="alredyHaveAccoutLogin">Already have an account</string>
    <string name="phoneLogin">Phone login</string>
    <string name="createAccount">Create account</string>
    <string name="needNewAccount">Need new account</string>
    <string name="orLoginUsingYour">Or login using your</string>
    <string name="pleaseEnterEmailPassword">Please enter email and password</string>
    <string name="accountCreatedSuccessfully">Account created successfully</string>
    <string name="errorCreatedAccount">Error creating account</string>
    <string name="creatingNewAccount">Creating new account</string>
    <string name="pleaseWait">Please wait</string>
    <string name="loggedInSuccessful">Logged in successful</string>
    <string name="loginIn">Try to login in</string>
    <string name="findFrends">Find frends</string>
    <string name="settingsOption">Profile</string>
    <string name="logoutOption">Logout</string>
    <string name="userStatus">User status</string>
    <string name="save">Save</string>
    <string name="writeYourNameStatus">Please write your name and status</string>
    <string name="profileUpdatedSuccessfuly">Profile updated successfuly</string>
    <string name="setUpdateProfileInformation">Please set and update profile information</string>
    <string name="createGroup">Create group</string>
    <string name="enterGroputName">Enter group name</string>
    <string name="appNameGroup">Is love group name</string>
    <string name="pleaseWriteNameGroup">Please write group name</string>
    <string name="cancel">Cancel</string>
    <string name="groupCreated">Group created</string>
    <string name="groups">Groups</string>
    <string name="writeMessage">Write message</string>
    <string name="groupName">Group Name</string>
    <string name="inputPhoneNumber">Input phone number</string>
    <string name="verificationCode">Verification code</string>
    <string name="sendVerCode">Send verification code</string>
    <string name="verify">Verify</string>
    <string name="insertNumberPhone">Insert phone number</string>
    <string name="codeSent">Code has been sent, please check</string>
    <string name="insertVerificationCode">Insert verification code</string>
    <string name="phoneVerification">Phone verification</string>
    <string name="codeVerification">Code verification</string>
    <string name="conglarationsYou">Congratulations, you are logged in successfully</string>
    <string name="error">Error</string>
    <string name="imageUploaded">Image uploaded</string>
    <string name="chat">Send message</string>
    <string name="contacts">Contacts</string>
    <string name="listUsers">List of users</string>
    <string name="thisAppNeedLocation">This app need location</string>
    <string name="termAndCond">Agree terms and conditions</string>
    <string name="start">Start</string>
    <string name="author">Developer Alexei Suzdalenko</string>
    <string name="userAge">User age</string>
    <string name="myGender">My gender</string>
    <string name="man">Man</string>
    <string name="woman">Mulher</string>
    <string name="meSearch">I am looking for</string>
    <string name="setUserDataAndUploadUserFoto">Set your data and upload your profile image</string>
    <string name="block">Block this user</string>
    <string name="writeReason">Write the reason for blocking or reporting user misbehavior</string>
    <string name="sent">Sent</string>
    <string name="infoSented">Thank you</string>
    <string name="reportUserBehavior">Report user behavior</string>
    <string name="blockThisUser">Block this user</string>
    <string name="report">Report</string>
</resources>