<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="islove.app.MainActivity">
    <item
        android:id="@+id/findFrends"
        android:orderInCategory="100"
        android:title="@string/findFrends"
        app:showAsAction="never" />

    <item
        android:id="@+id/createGroup"
        android:orderInCategory="100"
        android:title="@string/createGroup"
        app:showAsAction="never" />

    <item
        android:id="@+id/settingsOption"
        android:orderInCategory="110"
        android:title="@string/settingsOption"
        app:showAsAction="never" />

    <item
        android:id="@+id/logoutOption"
        android:orderInCategory="120"
        android:title="@string/logoutOption"
        app:showAsAction="never" />
</menu>