<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/titleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:textSize="64sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/termAndCond"
        android:layout_marginTop="44dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termAndCond"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleApp" />

    <Button
        android:id="@+id/startAppChat"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:layout_marginTop="44dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termAndCond"
        />

    <TextView
        android:id="@+id/authorApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>