<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/loginImage"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/login_photo" />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginImage"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="17dp"
                android:autofillHints="no"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/email"
                android:hint="@string/emailRegister"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailLogin"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="17dp"
                android:autofillHints="no"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/password"
                android:hint="@string/userPassword"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/forgetPasswordLogin"
                android:text="@string/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLogin"
                android:layout_alignParentEnd="true"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginEnd="17dp"
                 />

            <Button
                android:id="@+id/buttonLogin"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgetPasswordLogin"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="27dp"
                android:background="@color/green"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                 />

            <TextView
                android:id="@+id/needNewAccount"
                android:text="@string/needNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginEnd="17dp"
                />

            <TextView
                android:id="@+id/orLoginUsingYour"
                android:text="@string/orLoginUsingYour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/needNewAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginEnd="17dp"
                />

            <Button
                android:id="@+id/phoneLogin"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orLoginUsingYour"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="27dp"
                android:background="@color/green"
                android:text="@string/phoneLogin"
                android:textAllCaps="false"
                android:drawableStart="@drawable/phone"
                android:textColor="@color/white"
                android:layout_marginBottom="44dp"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>









