<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MyProfileActivity">
    <ImageView
        android:id="@+id/backImageMyProfile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:src="@drawable/camara"
        app:civ_border_width="2dp" />

    <ProgressBar
        android:visibility="gone"
        android:layout_below="@+id/profileImage"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBarProfile"
        android:layout_width="22dp"
        android:layout_height="22dp" />

    <EditText
        android:id="@+id/setUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileImage"
        android:inputType="text"
        android:autofillHints="no"
        android:maxLines="1"
        android:hint="@string/userName"
        android:drawableStart="@drawable/edit_profile"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/inputs"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="42dp"
        android:padding="6dp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/setUserStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setUserName"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:autofillHints="no"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/edit_status"
        android:hint="@string/userStatus"
        android:inputType="textMultiLine"
        android:padding="6dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewPlace"
        android:layout_below="@+id/setUserStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        />

    <EditText
        android:id="@+id/setUserAge"
        android:layout_below="@+id/textViewPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:autofillHints="no"
        android:background="@drawable/inputs"
        android:hint="@string/userAge"
        android:inputType="number"
        android:padding="6dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:id="@+id/linearlayoutMySex"
        android:layout_below="@+id/setUserAge"
        android:background="@drawable/inputs"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:padding="11dp"
        >
        <TextView
            android:text="@string/myGender"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:id="@+id/radioIamMan"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:id="@+id/radioIamWoman"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutMySearch"
        android:layout_below="@+id/linearlayoutMySex"
        android:background="@drawable/inputs"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:padding="11dp"
        >
        <TextView
            android:text="@string/meSearch"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <RadioButton
                android:id="@+id/radioSearchMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                />
            <RadioButton
                android:id="@+id/radioSearchWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/saveSettings"
        android:layout_below="@+id/linearlayoutMySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/green"
        android:layout_margin="22dp"
        android:padding="6dp"
        android:textAllCaps="false"
        android:text="@string/save"
        android:textSize="21dp"
         />
</RelativeLayout>
</ScrollView>