<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupChatActivity">
    <include
        android:id="@+id/groupChatBarL"
        layout="@layout/app_bar_layout" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChatConversation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relativeLayoutChat"
        android:layout_below="@+id/groupChatBarL"
        android:padding="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutChat"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputChatMessage"
            android:hint="@string/writeMessage"
            android:layout_toStartOf="@id/sentMessageChat"
            android:layout_marginEnd="5dp"
            tools:ignore="Autofill"
            android:inputType="textMultiLine" />

        <ImageButton
            android:id="@+id/sentMessageChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:text="@string/save"
            android:contentDescription="@string/app_name"
            android:src="@drawable/send_message"
            />

    </RelativeLayout>

</RelativeLayout>