<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/loginImage"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/signup_photo" />

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginImage"
                android:layout_alignParentStart="true"
                android:layout_margin="17dp"
                android:autofillHints="no"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/email"
                android:hint="@string/emailRegister"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailRegister"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="17dp"
                android:autofillHints="no"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/password"
                android:hint="@string/userPassword"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/termAndCond"
                android:layout_below="@+id/passwordRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termAndCond"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="17sp"
              />

            <Button
                android:id="@+id/buttonCreateAccount"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/termAndCond"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="27dp"
                android:background="@color/green"
                android:text="@string/createAccount"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/alredyHaveAccoutRegister"
                android:text="@string/alredyHaveAccoutLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonCreateAccount"
                android:layout_centerHorizontal="true"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginEnd="17dp"
                android:layout_marginTop="27dp"
                android:layout_marginBottom="44dp"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>