<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".VisitReceiverActivity">

    <ImageView
        android:id="@+id/backImageUserVisit"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visitProfileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:layout_width="211dp"
        android:layout_height="211dp"
        android:src="@drawable/profile_image"
        />
    <TextView
        android:id="@+id/visitNameTextView"
        android:textColor="@color/black"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/visitProfileImage"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/visitStateTextView"
        android:textColor="@color/black"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/visitNameTextView"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/sentMessageButton"
        android:layout_below="@+id/visitStateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="55dp"
        android:text="@string/chat"
        android:textAllCaps="false"
        />
    <TextView
        android:id="@+id/blockThisUser"
        android:layout_below="@+id/sentMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/reportUserBehavior"
        android:layout_below="@id/blockThisUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/reportUserBehavior"
        android:layout_width="wrap_content"
        android:textColor="@color/black" android:layout_height="wrap_content"

        />
</RelativeLayout>
</ScrollView>