<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginActivity">
    <EditText
        android:id="@+id/pnoneNumberEditText"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="180dp"
        android:padding="8dp"
        android:background="@drawable/inputs"
        android:hint="@string/inputPhoneNumber"
        android:importantForAutofill="no"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:drawableStart="@drawable/phone"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/verificationCode"
        android:layout_below="@+id/pnoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="11dp"
        android:padding="5dp"
        android:drawableStart="@drawable/password"
        android:background="@drawable/inputs"
        android:hint="@string/verificationCode"
        android:importantForAutofill="no"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/sendVerCodeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendVerCode"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_below="@+id/verificationCode"
        android:layout_marginTop="22dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="17sp"
        />

</RelativeLayout>